Fix scrolling issue, but on small screens the contents don't fit

--- a/billchop-fe/src/styles/groups-page.css
+++ b/billchop-fe/src/styles/groups-page.css
@@ -5,4 +5,5 @@
 .subpage-container {
   overflow-y: scroll;
   overflow-x: hidden;
+  position: absolute;
 }
